applications/imgproxy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: imageproxy
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    name: imageproxy
status:
  loadBalancer: {}
