applications/imgproxy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: https
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: imageproxy-ingress
  namespace: applications
spec:
  rules:
    - host: imageproxy.home.juli.sh
      http:
        paths:
          - backend:
              service:
                name: imageproxy
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - imageproxy.home.juli.sh
      secretName: imageproxy-tls
status:
  loadBalancer: {}
